[FAIT] fini le fichier classification

--- a/apprentissage/partie3_entrainement.ipynb
+++ b/apprentissage/partie3_entrainement.ipynb
@@ -2,24 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "bf13e576",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'pnd' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m#Chargement du dataset avec pour séparateur des tabulations\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m dataset = \u001b[43mpnd\u001b[49m.read_csv(\u001b[33m\"\u001b[39m\u001b[33mdatas/dataset.csv\u001b[39m\u001b[33m\"\u001b[39m,delimiter=\u001b[33m'\u001b[39m\u001b[38;5;130;01m\\t\u001b[39;00m\u001b[33m'\u001b[39m)\n\u001b[32m      4\u001b[39m \u001b[38;5;66;03m#Suppression des lignes ayant des valeurs manquantes\u001b[39;00m\n\u001b[32m      5\u001b[39m dataset = dataset.dropna(axis=\u001b[32m0\u001b[39m, how=\u001b[33m'\u001b[39m\u001b[33many\u001b[39m\u001b[33m'\u001b[39m)\n",
-      "\u001b[31mNameError\u001b[39m: name 'pnd' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import pandas as pd\n",
+    "import pandas as pnd\n",
     "\n",
     "#Chargement du dataset avec pour séparateur des tabulations\n",
     "dataset = pnd.read_csv(\"datas/dataset.csv\",delimiter='\\t')\n",
@@ -30,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "8655b0fd",
    "metadata": {},
    "outputs": [],
@@ -43,13 +31,167 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "cd864d20",
    "metadata": {},
    "outputs": [],
    "source": [
     "#y = on prend uniquement la feature POURCENTAGE_DE_VICTOIRE (17ème feature)\n",
     "y = dataset.iloc[:, 17].values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "40e571d0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#X = on prend toutes les données, mais uniquement les features 4 à 11\n",
+    "# POINTS_ATTAQUE;POINTS_DEFFENCE;POINTS_ATTAQUE_SPECIALE;POINT_DEFENSE_SPECIALE;POINTS_VITESSE;NOMBRE_GENERATIONS\n",
+    "X = dataset.iloc[:, 5:12].values\n",
+    "\n",
+    "#y = on prend uniquement la colonne POURCENTAGE_DE_VICTOIRE (16ème feature) \n",
+    "#les : signifiant \"Pour toutes les observations\"\n",
+    "y = dataset.iloc[:, 16].values\n",
+    "\n",
+    "#Construction du jeu d'entrainement et du jeu de tests\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "X_APPRENTISSAGE, X_VALIDATION, Y_APPRENTISSAGE, Y_VALIDATION = train_test_split(X, y, test_size = 0.2, random_state = 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "efe7726f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ">> ----------- REGRESSION LINEAIRE -----------\n",
+      ">> Precision = 0.8828844617689129\n",
+      "------------------------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "#---- ALGORITHME 1: REGRESSION LINEAIRE -----\n",
+    "from sklearn.metrics import r2_score\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "\n",
+    "#Choix de l'algorithme\n",
+    "algorithme = LinearRegression()\n",
+    "\n",
+    "#Apprentissage à l'aide de la fonction fit\n",
+    "#Apprentisage effectué sur le jeu de données d'apprentissage\n",
+    "algorithme.fit(X_APPRENTISSAGE, Y_APPRENTISSAGE)\n",
+    "\n",
+    "#Realisation de prédictions sur le jeu de tests (validation)\n",
+    "predictions = algorithme.predict(X_VALIDATION)\n",
+    "\n",
+    "#Calcul de la précision de l'apprentissage à l'aide de la\n",
+    "#fonction r2_score en comparant les valeurs prédites\n",
+    "#(predictions) et les valeurs attendues (Y_VALIDATION)\n",
+    "precision = r2_score(Y_VALIDATION, predictions)\n",
+    "\n",
+    "print(\">> ----------- REGRESSION LINEAIRE -----------\")\n",
+    "print(\">> Precision = \"+str(precision))\n",
+    "print(\"------------------------------------------\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "c0ba44f4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ">> ----------- ARBRES DE DECISIONS -----------\n",
+      ">> Precision = 0.8036296850554384\n",
+      "------------------------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Choix de l'algorithme\n",
+    "from sklearn.tree import DecisionTreeRegressor\n",
+    "algorithme = DecisionTreeRegressor()\n",
+    "algorithme.fit(X_APPRENTISSAGE, Y_APPRENTISSAGE)\n",
+    "predictions = algorithme.predict(X_VALIDATION)\n",
+    "precision = r2_score(Y_VALIDATION, predictions)\n",
+    "\n",
+    "print(\">> ----------- ARBRES DE DECISIONS -----------\")\n",
+    "print(\">> Precision = \"+str(precision))\n",
+    "print(\"------------------------------------------\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "0e48b9e2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ">> ----------- FORETS ALEATOIRES -----------\n",
+      ">> Precision = 0.8963488872995451\n",
+      "------------------------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Choix de l'algorithme\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "algorithme = RandomForestRegressor()\n",
+    "algorithme.fit(X_APPRENTISSAGE, Y_APPRENTISSAGE)\n",
+    "predictions = algorithme.predict(X_VALIDATION)\n",
+    "precision = r2_score(Y_VALIDATION, predictions)\n",
+    "\n",
+    "print(\">> ----------- FORETS ALEATOIRES -----------\")\n",
+    "print(\">> Precision = \"+str(precision))\n",
+    "print(\"------------------------------------------\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "2814c542",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['modele/modele_pokemon.mod']"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import joblib\n",
+    "fichier = 'modele/modele_pokemon.mod'\n",
+    "joblib.dump(algorithme, fichier)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "823997c0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predictions = algorithme.predict(X_VALIDATION)\n",
+    "precision_apprentissage = algorithme.score(X_APPRENTISSAGE,Y_APPRENTISSAGE)\n",
+    "precision = r2_score(Y_VALIDATION, predictions)"
    ]
   }
  ],
